[package]
name = "dao-keeper"
version = "0.0.1"
edition = "2018"

[features]
devnet = []

[dependencies]
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
tokio = {version = "~1.14.1", features = ["full"] }
hyper = { version = "0.14.17", features = ["full"] }
routerify = "3"
log="0.4.17"
gauge = {git="https://github.com/MeteoraAg/dao", branch="incentive_system"}
quarry = {git="https://github.com/MeteoraAg/dao", branch="incentive_system"}
moc-amm = {git="https://github.com/MeteoraAg/dao", branch="incentive_system"}
anchor-client = {version = "0.28.0", features = ["async"]}
anchor-lang = {version="0.28.0"}
rand="0.8.5"
shellexpand = "2.1.0"
futures = "0.3.21"
anyhow = "1.0"
bincode = "^1.3.1"
sqlx = { version = "0.6.3", features = [
    "runtime-tokio-rustls",
    "postgres",
    "macros",
    "bigdecimal",
]}
clap = { version = "4.3.3", features = ["derive"] }